--- a/package.json
+++ b/package.json
@@ -39,5 +39,8 @@
 		"typescript-eslint": "^8.53.1",
 		"vite": "^7.3.1",
 		"wrangler": "^4.60.0"
+	},
+	"dependencies": {
+		"gsap": "^3.14.2"
 	}
 }
