--- a/src/lib/data/projects.json
+++ b/src/lib/data/projects.json
@@ -1,15 +1,15 @@
 [
 	{
 		"id": "01",
-		"slug": "neural-architectures",
-		"title": "Neural Architectures",
-		"context": "Master's Thesis",
-		"year": "2024",
-		"tech": ["Python", "TensorFlow", "WebGL"],
+		"slug": "pedrolunet-dev",
+		"title": "PEDROLUNET.DEV",
+		"context": "Personal Project",
+		"year": "2026",
+		"tech": ["Svelte", "SvelteKit", "TypeScript", "TailwindCSS", "Gsap"],
 		"image": "https://images.unsplash.com/photo-1620641788421-7a1c342ea42e?q=80&w=1974&auto=format&fit=crop",
-		"description": "Visualizing high-dimensional data using biological metaphors. This project explores the intersection of organic growth patterns and machine learning datasets.",
-		"repo": "https://github.com/pedrolunet/neural-architectures",
-		"demo": "https://neural-architectures.vercel.app"
+		"description": "An exploration of digital brutalism and Swiss design principles. Built using my favourite web framework, Svelte, and trying to experiment with motion using Gsap. This site prioritizes raw information density, strict grid adherence, and typographic hierarchy over decorative elements. A performant canvas for my projects and thoughts. Started this project because my old portfolio didn't looked like me and didnt really showcased my work the way I wanted. I wanted to create a space that felt more personal and reflected my design sensibilities. I also wanted to experiment with Svelte 5 and see how far I could push it in terms of performance and interactivity.",
+		"repo": "https://github.com/pedrolunet/pedrolunet.dev",
+		"demo": "https://pedrolunet.dev"
 	},
 	{
 		"id": "02",
@@ -54,3 +54,7 @@
 		"description": "Code sketches and 3D explorations. A collection of half-baked ideas and visual experiments."
 	}
 ]
+
+
+
+
