--- a/src/lib/data/projects.json
+++ b/src/lib/data/projects.json
@@ -7,9 +7,14 @@
 		"year": "2026",
 		"tech": ["Svelte", "TypeScript", "TailwindCSS", "Gsap"],
 		"image": "https://images.unsplash.com/photo-1620641788421-7a1c342ea42e?q=80&w=1974&auto=format&fit=crop",
-		"description": "An exploration of digital brutalism and Swiss design principles. Built using my favourite web framework, Svelte, and trying to experiment with motion using Gsap. This site prioritizes raw information density, strict grid adherence, and typographic hierarchy over decorative elements. A performant canvas for my projects and thoughts. Started this project because my old portfolio didn't looked like me and didnt really showcased my work the way I wanted. I wanted to create a space that felt more personal and reflected my design sensibilities. I also wanted to experiment with Svelte 5 and see how far I could push it in terms of performance and interactivity.",
+		"description": "An exploration of digital brutalism and Swiss design principles. Built using my favourite web framework, Svelte, and experimenting with motion using GSAP. This site prioritizes raw information density, strict grid adherence, and typographic hierarchy over decorative elements. A performant canvas for my projects and thoughts.\n\nI started this project because my previous portfolio didn't feel authentic to my identity and failed to showcase my work the way I envisioned. I wanted to create a space that felt more personal and reflected my design sensibilities, while pushing Svelte 5 to its limits in terms of performance and interactivity.",
 		"repo": "https://github.com/pedrolunet/pedrolunet.dev",
-		"demo": "https://pedrolunet.dev"
+		"demo": "https://pedrolunet.dev",
+		"gallery": [
+			"https://images.unsplash.com/photo-1555066931-4365d14bab8c?q=80&w=2070&auto=format&fit=crop",
+			"https://images.unsplash.com/photo-1507721999472-8ed4421c4af2?q=80&w=2070&auto=format&fit=crop",
+			"https://images.unsplash.com/photo-1618005182384-a83a8bd57fbe?q=80&w=1964&auto=format&fit=crop"
+		]
 	},
 	{
 		"id": "02",
@@ -54,7 +59,3 @@
 		"description": "Code sketches and 3D explorations. A collection of half-baked ideas and visual experiments."
 	}
 ]
-
-
-
-
