added new project images and updated projects

--- a/src/lib/data/projects.json
+++ b/src/lib/data/projects.json
@@ -6,44 +6,44 @@
 		"context": "Personal Project",
 		"year": "2026",
 		"tech": ["Svelte", "TypeScript", "TailwindCSS", "Gsap"],
-		"image": "https://images.unsplash.com/photo-1620641788421-7a1c342ea42e?q=80&w=1974&auto=format&fit=crop",
+		"image": "/projects/pedrolunetDev/01.png",
 		"description": "An exploration of digital brutalism and Swiss design principles. Built using my favourite web framework, Svelte, and experimenting with motion using GSAP. This site prioritizes raw information density, strict grid adherence, and typographic hierarchy over decorative elements. A performant canvas for my projects and thoughts.\n\nI started this project because my previous portfolio didn't feel authentic to my identity and failed to showcase my work the way I envisioned. I wanted to create a space that felt more personal and reflected my design sensibilities, while pushing Svelte 5 to its limits in terms of performance and interactivity.",
 		"repo": "https://github.com/pedrolunet/pedrolunet.dev",
 		"demo": "https://pedrolunet.dev",
-		"gallery": [
-			"https://images.unsplash.com/photo-1555066931-4365d14bab8c?q=80&w=2070&auto=format&fit=crop",
-			"https://images.unsplash.com/photo-1507721999472-8ed4421c4af2?q=80&w=2070&auto=format&fit=crop",
-			"https://images.unsplash.com/photo-1618005182384-a83a8bd57fbe?q=80&w=1964&auto=format&fit=crop"
-		]
+		"gallery": ["/projects/pedrolunetDev/02.png"]
 	},
 	{
 		"id": "02",
-		"slug": "morphology",
-		"title": "Morphology",
-		"context": "Generative Art",
-		"year": "2023",
-		"tech": ["p5.js", "GLSL", "Canvas"],
-		"image": "https://images.unsplash.com/photo-1618005182384-a83a8bd57fbe?q=80&w=1964&auto=format&fit=crop",
-		"description": "A study in algorithmic growth patterns. Using reaction-diffusion equations to generate infinite variations of organic textures.",
-		"demo": "https://morphology-art.com"
+		"slug": "dodia",
+		"title": "DODIA.PT",
+		"context": "Currcicular Internship",
+		"year": "2025",
+		"tech": ["Next.js", "TailwindCSS", "TypeScript", "React", "Drizzle"],
+		"image": "/projects/dodia/01.png",
+		"description": "Dodia it's my first professional project, built during my curricular internship at @Significa. It's a web app where local restaurants (tascas) can post their daily menu, allowing user to decide where to eat. It is comunity-driven, with a siple and intuitive interface, where users can post the menu for their favourite restaurants.",
+		"demo": "https://dodia.pt",
+		"gallery": ["/projects/dodia/02.png"]
 	},
 	{
 		"id": "03",
-		"slug": "urban-decay",
-		"title": "Urban Decay",
-		"context": "Photography",
-		"year": "2023",
-		"tech": ["Analog", "Darkroom", "Scan"],
-		"image": "https://images.unsplash.com/photo-1478720568477-152d9b164e63?q=80&w=1998&auto=format&fit=crop",
-		"description": "Documenting the quiet collapse of modern structures. Shot on Ilford HP5+ and developed by hand."
+		"slug": "dot-journal",
+		"title": "DOT JOURNAL",
+		"context": "Personal Project",
+		"year": "2026",
+		"tech": ["Svelte", "TailwindCSS", "TypeScript"],
+		"image": "/projects/dotJournal/01.png",
+		"description": "It's my most recent project, a minimalist journal app, that runs on web and stores everything locally. Built with svelte as a way to explore Svelte 5's new features and capabilities. The app focuses on simplicity and ease of use, allowing users to quickly jot down their thoughts and ideas without any distractions. It features a clean and intuitive interface, with a focus on typography and whitespace to create a calming writing environment. It also allows users to costumize each day by selecting a color for the dot so it's easier to go back to in the future.",
+		"gallery": ["/projects/dotJournal/02.png", "/projects/dotJournal/03.png"],
+		"repo": "https://github.com/pedrolunet/journal",
+		"demo": "https://journal.pedrolunet.dev"
 	},
 	{
 		"id": "04",
-		"slug": "system-01",
-		"title": "System 01",
+		"slug": "junto",
+		"title": "JUNTO.",
 		"context": "University",
-		"year": "2022",
-		"tech": ["Figma", "Design Systems"],
+		"year": "2025",
+		"tech": ["Laravel", "PostgreSQL", "TailwindCSS", "Docker"],
 		"image": "https://images.unsplash.com/photo-1558655146-d09347e92766?q=80&w=2000&auto=format&fit=crop",
 		"description": "A comprehensive UI kit for academic dashboards. Focused on high-contrast accessibility and density.",
 		"repo": "https://github.com/pedrolunet/system-01"
