--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
 	"dependencies": {
 		"@lucide/svelte": "^0.563.1",
 		"@studio-freight/lenis": "^1.0.42",
-		"gsap": "^3.14.2"
+		"gsap": "^3.14.2",
+		"resend": "^6.9.1"
 	}
 }
