--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -9,5 +9,8 @@
 		"directory": ".svelte-kit/cloudflare"
 	},
 	"workers_dev": true,
-	"preview_urls": true
+	"preview_urls": true,
+	"vars": {
+		"CONTACT_EMAIL": "hello@pedrolunet.dev"
+	}
 }
